# Nagruzka_PC

./: README.md
код_для_сайта/: код_для_pytho_на_стороне_сайта.py  кусок_index.html  таблица_в_postgresql_для_данных.sql  функция_для_отправки_данных_сайту.sql
код_программы_на_си/: запуск_сборки.sh
код_программы_на_си/demon_нагрузка_cpu/: CMakeLists.txt
код_программы_на_си/demon_нагрузка_cpu/.codelite/: demon_нагрузка_cpu-postgres.tags  demon_нагрузка_cpu.session  demon_нагрузка_cpu.workspace.postgres
код_программы_на_си/demon_нагрузка_cpu/.ctagsd/: file_list.txt
код_программы_на_си/demon_нагрузка_cpu/main_program/: CMakeLists.txt  _ВАЖНО_оформление_кода.txt  глобальные_переменные.h
код_программы_на_си/demon_нагрузка_cpu/бд_запросы/: CMakeLists.txt  запросы_к_бд.h
код_программы_на_си/demon_нагрузка_cpu/блок_нагрузка_пк/: CMakeLists.txt  нагрузка_пк.c  нагрузка_пк.h  я_импорт_config.cя
код_программы_на_си/demon_нагрузка_cpu/настр_ключи_при_запуске/: CMakeLists.txt  входные_данные.c
код_программы_на_си/demon_нагрузка_cpu/ошибки_обработка/: CMakeLists.txt
код_программы_на_си/demon_нагрузка_cpu/системные_команды/: CMakeLists.txt  системные_функции.c  системные_функции.h
код_программы_на_си/demon_нагрузка_cpu/файлы_внешние/: CMakeLists.txt  файлы_действия.c  файлы_действия.h
код_программы_на_си/main_program/: main.c  main.h
код_программы_на_си/бд_запросы/: запросы_к_бд.c
код_программы_на_си/настр_ключи_при_запуске/: входные_данные.c  входные_данные.h
код_программы_на_си/ошибки_обработка/: ошибки_обработка.c  ошибки_обработка.h
копия_бд/: nagruzka_pc.sql
